--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,12 +7,16 @@
     "storage"
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self';",
-    "sandbox": "sandbox allow-scripts; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; object-src 'self';"
+    "sandbox": "sandbox allow-scripts; script-src 'self' https://cdn.jsdelivr.net;"
+  },
+  "sandbox": {
+    "pages": [
+      "sandbox.html"
+    ]
   },
   "web_accessible_resources": [
     {
-      "resources": [ "tf_worker.js" ],
+      "resources": [ "sandbox.html", "sandbox.js" ],
       "matches": [ "<all_urls>" ]
     }
   ],
