Allow unsafe-eval on cdn.jsdelivr.net

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,7 @@
     "storage"
   ],
   "content_security_policy": {
-    "sandbox": "sandbox allow-scripts; script-src 'self' https://cdn.jsdelivr.net;"
+    "sandbox": "sandbox allow-scripts; script-src 'self' https://cdn.jsdelivr.net 'unsafe-eval';"
   },
   "sandbox": {
     "pages": [
